# UEAdminAPI-Drogon

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Note0720.txt  README.en.md  README.md  TodoList.md  check_config.py  check_encoding.py  check_env.sh  cmake_sh.sh  config.template.yaml  config.yaml  config.yml  final_test.sh  full_test.sh  gitlabApi.cc  gitlabApi.h  main.cc  patch_config.py  run_api_test.sh  run_api_test2.sh  run_debug_test.sh  run_fg_test.sh  run_final_test.sh  run_final_test2.sh  run_route_test.sh  run_test.sh  test_config.sh  vcpkg.json  vcpkg_dependencies.txt
.github/workflows/: build.yml
.trae/rules/: project_rules.md
build_docker/: Dockerfile.build  Dockerfile.run  docker-compose.yml
controllers/: GitlabController.cc  GitlabController.h  Login.cc  Login.h  OAuth2Controller.cc  OAuth2Controller.h  Register.cc  Register.h  SendVerifyCode.cc  SendVerifyCode.h  SystemController.cc  SystemController.h  TestController.cc  TestController.h  TestMfaController.cc  TestMfaController.h  ThirdPartyLogin.cc  ThirdPartyLogin.h  UserController.cc  UserController.h
docs/: API Reference Documentation.md  API_Error_Codes.md  ActionToken_Architecture.md  SingletonWithInitUsage.md
filters/: ActionTokenFilter.cc  ActionTokenFilter.h  ActionTokenMiddleware.cc  ActionTokenMiddleware.h  AuthFilter.cc  AuthFilter.h  RateLimitFilter.cc  RateLimitFilter.h
models/: MfaChannels.cc  MfaChannels.h  MfaRecords.cc  MfaRecords.h  ThirdPartyPlatforms.cc  ThirdPartyPlatforms.h  ThirdpartyPlatforms.cc  ThirdpartyPlatforms.h  User.cc  User.h  UserDeleted.cc  UserDeleted.h  UserFlashtoken.cc  UserFlashtoken.h  UserGitlabInfo.cc  UserGitlabInfo.h  UserThirdPartyInfo.cc  UserThirdPartyInfo.h  UserThirdpartyInfo.cc  UserThirdpartyInfo.h
plugins/: SMTPMail.cc  SMTPMail.h
services/: ActionTokenService.cpp  ActionTokenService.h  AuthService.cpp  AuthService.h  EmailService.cpp  EmailService.h  ExampleService.cpp  ExampleService.h  GitlabService.cpp  GitlabService.h  MFAService.cpp  MFAService.h  ServiceDtos.h  SystemService.cpp  SystemService.h  TencentSMSService.cpp  TencentSMSService.h  ThirdPartyLoginService.cc  ThirdPartyLoginService.h  UserManageService.cpp  UserManageService.h
swagger/: generate_swagger.py  index.html  swagger.json
test/: CMakeLists.txt
testScript/: README.md  api_client.py  session.json
tests/: README.md  api_client.py  conftest.py  detail.csv  pytest.ini  test_actiontoken.py  test_auth_login.py  test_mfa.py  test_register.py  test_system.py  test_user_manage.py
utils/: ApiErrorCodes.h  AuthRepository.cpp  AuthRepository.h  DataFormatUtils.cpp  DataFormatUtils.h  EMailHelper.h  EmailHelper.cpp  EnumThirdPartyPlatform.cpp  EnumThirdPartyPlatform.h  EnumUserPrivileges.h  GetAnotherIoLoop.cpp  GetAnotherIoLoop.h  HttpResult.cpp  HttpResult.h  PostParamMap.cpp  PostParamMap.h  RandomGenerator.cpp  RandomGenerator.h  ServiceResponse.h  Singleton.h  SingletonT.h  SingletonWithInit.h  TestModeConfig.h  UserManger.cc  UserManger.h
utils/MFA/: ICodePair.h  IEmailService.h  ISmsService.h  MFACodePair.h  MFACodePiar.cpp  MFA_Channels.cpp  MFA_Channels.h  MFA_Manager.cpp  MFA_Manager.h  eMFA_Type.cpp  eMFA_Type.h
